*********************************************************************************************************
digiKam 1.0.0-beta4 - Release date: 2009-08-xx

NEW FEATURES:

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 192534 : Rename a folder, then rename a photo and you get an error.
002 ==> 193522 : first run (with existing v3 database) fails, "No album library path...".
003 ==> 


*********************************************************************************************************
digiKam 1.0.0-beta3 - Release date: 2009-07-24

NEW FEATURES:

General        : Exif, Makernotes, Iptc, and Xmp metadata tags filtering can be customized in setup config dialog.
General        : Metadata Template: add support of Contact, Location, and Subjects IPTC information.
General        : Add support of Author properties to multi-language Captions. User can set
                 an author name for each caption value.
ImageEditor    : Close tools by pressing ESC.

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 199168 : Tags in db but not in IPTC.
002 ==> 184445 : Deleting multiple files in folder view gives me multiple errors.
003 ==> 151749 : External URLs from pictures for related information.
004 ==> 192701 : Application: digiKam (digiKam), signal SIGSEGV --Crash under Gnome (Ubuntu 9.04).
005 ==> 199394 : Request: "regenerate folder thumbnails" menu item.
006 ==> 199420 : Duplication of Albums when naming them using upper case letters.
007 ==> 192535 : digiKam collections on removable media are treated as local collections.
008 ==> 199497 : Open camera rejected with: "Fehler beim Auflisten der Dateien in /store_00010001/DCIM/100CANON.".
009 ==> 199602 : Exif rotation not interpreted the same way in different tools.
010 ==> 191522 : Crash on use default action "Download Photos with digiKam".
011 ==> 196463 : Crash on device action Download Photos with Digikam.