@@ -46,6 +46,7 @@ class AlbumIconItem;
 class AlbumSettings;
 class Album;
 class AlbumIconViewFilter;
+class BatchSyncMetadata;
 class DigikamViewPriv;
 
 class DigikamView : public KHBox
@@ -117,8 +118,8 @@ public Q_SLOTS:
     void slotAlbumAdded(Album *album);
     void slotAlbumDeleted(Album *album);
     void slotAlbumRenamed(Album *album);
-    void slotAlbumSyncPicturesMetadata();
-    void slotAlbumSyncPicturesMetadataDone();
+    void slotAlbumWriteMetadata();
+    void slotAlbumReadMetadata();
     void slotAlbumSelected(Album* album);
 
     void slotGotoAlbumAndItem(const ImageInfo& imageInfo);
@@ -150,6 +151,8 @@ public Q_SLOTS:
     void slotImageDeletePermanently();
     void slotImageDeletePermanentlyDirectly();
     void slotImageTrashDirectly();
+    void slotImageWriteMetadata();
+    void slotImageReadMetadata();
     void slotSelectAll();
     void slotSelectNone();
     void slotSelectInvert();
@@ -177,6 +180,7 @@ private:
     void saveViewState();
     void changeAlbumFromHistory(Album *album, QWidget *widget);
     void slideShow(const ImageInfoList& infoList);
+    void connectBatchSyncMetadata(BatchSyncMetadata *syncMetadata);
 
 private Q_SLOTS:
 
